src/test/deca/context/invalid/provided/invalid_multiplication_int_boolean.deca
// Description:
//    Multiplication entre un int et un boolean.
//
// Resultats:
//    invalid_multiplication_int_boolean.deca:14:13: Invalid operand types: expected int or float, but got int and boolean
//
// Historique:
//    cree le 12/01/2025
{
int x = 5;
boolean y = true;

// Doit etre refuse.
int result = x * y;
}
